fixing fluid media query bug; adding scrollbar mixin

--- a/packages/components/src/styles/_mixins.scss
+++ b/packages/components/src/styles/_mixins.scss
@@ -1,6 +1,4 @@
-
-@import './_media.scss';
-
+@import "./_media.scss";
 
 /* Adds elipsis to element */
 @mixin ellipsis() {
@@ -9,16 +7,47 @@
   white-space: nowrap;
 }
 
-
 @function getFluidvalue($minValue, $maxValue) {
-  @return calc(#{$minValue}px + (#{$maxValue} - #{$minValue}) * ((100vw - #{$viewport__width--minimum}px) / (#{$viewport__width--maximum} - #{$viewport__width--minimum})));
+  @return calc(
+    #{$minValue}px + (#{$maxValue} - #{$minValue}) *
+      (
+        (100vw - #{$viewport__width--minimum}px) /
+          (#{$viewport__width--maximum} - #{$viewport__width--minimum})
+      )
+  );
 }
 
-
 @mixin getFluidFontSize($minValue, $maxValue) {
-  font-size: calc(#{$minValue}px + (#{$maxValue} - #{$minValue}) * ((100vw - #{$viewport__width--minimum}px) / (#{$viewport__width--maximum} - #{$viewport__width--minimum})));
+  font-size: #{getFluidvalue($minValue, $maxValue)};
+}
 
-  @include mediaQuery(">viewportLimit") {
-    font-size: #{$maxValue}px;
+// @include mediaQuery(">viewportLimit") {
+//   font-size: #{$maxValue}px;
+// }
+
+@mixin setScrollbar(
+  $width,
+  $thubmColor,
+  $backgroundColor
+) {
+  /* width */
+  &::-webkit-scrollbar {
+    width: $width;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: $backgroundColor;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $thubmColor;
+    border-radius: 6px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: $thubmColor;
   }
 }
